--- a/com_flexicontent_v2.x/plugins/flexicontent_fields/coreprops/en-GB.plg_flexicontent_fields_coreprops.ini
+++ b/com_flexicontent_v2.x/plugins/flexicontent_fields/coreprops/en-GB.plg_flexicontent_fields_coreprops.ini
@@ -11,8 +11,8 @@ FLEXI_CORE_PROPS_DESCRIPTION="For placing: title, state, created, createdby, mod
 FLEXI_COREPRPS_PROPRI="Property type"
 FLEXI_COREPRPS_PROPRI_DESC="Select the CORE property or CORE property group (normally these will appear in a TAB by default), that you want to place in item form"
 FLEXI_BASIC_SINGLE_PROPS="Basic or Single properties"
-FLEXI_ALIAS="Alias"
-FLEXI_LANGUAGE"Language and associations"
+FLEXI_CORE_ALIAS="Alias"
+FLEXI_LANGUAGE="Language and associations"
 FLEXI_COMMENT="Disable comments"
 FLEXI_NOTIFY="Notify subscibers"
 FLEXI_CAPTCHA="Captcha"
