--- a/com_flexicontent_v2.x/plugins/flexicontent_fields/fcloadmodule/en-GB.plg_flexicontent_fields_fcloadmodule.ini
+++ b/com_flexicontent_v2.x/plugins/flexicontent_fields/fcloadmodule/en-GB.plg_flexicontent_fields_fcloadmodule.ini
@@ -17,4 +17,6 @@ FLEXI_SELECT_POSITION="Select a position"
 FLEXI_SELECT_MODULE="Select a module"
 FLEXI_FIELD_MODULE_STYLE="Style"
 FLEXI_FIELD_MODULE_STYLE_DESC="Select the style to render your module, let empty to use the basic render 'none'"
+FLEXI_CUSTOM_MODULE_PER_ITEM="Customize module parameters per item (not for position mode)"
+FLEXI_CUSTOM_MODULE_PER_ITEM="You can - try - to customize some module parameters by allowing user to enter values for them in item form. <br/><br/> <b>NOTE</b> You need to examine XML file of target module to find parameter names  &lt;br/&gt;&lt;br/&gt; <b>Example</b>  <br/> param_label1!!param_name1 %% param_label2!!param_name2 %% param_label3!!param_name3 "
 ;Frontend strings
