--- a/com_flexicontent_v2.x/plugins/flexicontent_fields/relation/en-GB.plg_flexicontent_fields_relation.ini
+++ b/com_flexicontent_v2.x/plugins/flexicontent_fields/relation/en-GB.plg_flexicontent_fields_relation.ini
@@ -126,4 +126,9 @@ FLEXI_RIFLD_DISPLAY_CAT_FILTER_LABEL_DESC="Display or hide label of category fil
 FLEXI_RIFLD_DISPLAY_TITLE_FILTER_LABEL="Display title filter label"
 FLEXI_RIFLD_DISPLAY_TITLE_FILTER_LABEL_DESC="Display or hide label of title filter"
 FLEXI_RIFLD_DEFAULT_VALUE_TITLE_FILTER="Default value title filter"
-FFLEXI_RIFLD_DEFAULT_VALUE_TITLE_FILTER_DESC="Choose a default value or leave bank for none"
+FLEXI_RIFLD_DEFAULT_VALUE_TITLE_FILTER_DESC="Choose a default value or leave bank for none"
+FLEXI_BASIC_ORDER="Ordering by default"
+FLEXI_ORDER_ORDERING="Ordering items in list"
+FLEXI_CUSTOM_ORDER="Custom ordering"
+FLEXI_HTML="HTML"
+FLEXI_EXTRA_INFO="Show extra information"
