--- a/plugins/flexicontent_fields/extendedweblink/en-GB.plg_flexicontent_fields_extendedweblink.ini
+++ b/plugins/flexicontent_fields/extendedweblink/en-GB.plg_flexicontent_fields_extendedweblink.ini
@@ -25,7 +25,8 @@ FLEXI_EXTWL_URLID="HTML Tag id"
 
 FLEXI_EXTWL_RELATIVE_ADDRESSES="Allow relative addresses"
 FLEXI_EXTWL_RELATIVE_ADDRESSES_DESC="Allow users to enter relative addresses. When this is disabled addresses not having a protocol prefix will be automatically prefixed with HTTP://"
-FLEXI_EXTWL_AUTOPREFIX="Auto prefix with HTTP"
+FLEXI_EXTWL_IS_RELATIVE="Relative URL"
+FLEXI_EXTWL_IS_RELATIVE_DESC="No will force URL to become absolute prepending 'http://' if no protocol is given"
 
 FLEXI_EXTWL_POPULARITY="Popularity"
 
