--- a/plugins/flexicontent_fields/image/en-GB.plg_flexicontent_fields_image.ini
+++ b/plugins/flexicontent_fields/image/en-GB.plg_flexicontent_fields_image.ini
@@ -111,7 +111,7 @@ FLEXI_PARAMETERS_BEHAVIOR_FOLDER_MODE_DESC="Configuration Parameters that are us
 
 FLEXI_FIELD_AUTO_ASSIGN_UPLOADED_IMAGE="Auto-assign new image"
 FLEXI_FIELD_AUTO_ASSIGN_UPLOADED_IMAGE_DESC="Enable this to automatically close popup file-management and assign newly uploaded file to current image record"
-FLEXI_FIELD_PROTECT_ORIGINAL="Prevent access to original images <br/><small>(folder mode)</small>"
+FLEXI_FIELD_PROTECT_ORIGINAL="Prevent access to original images"
 FLEXI_FIELD_PROTECT_ORIGINAL_DESC="Usually you would want to prevent access to the original image files (this setting is for folder mode, <b>in the case of DB-mode they are always protected</b>). <br/><br/>If you are are using original images in various configuration parameters, then you need to disable this setting, otherwise your image links will get a server deny error"
 
 FLEXI_FIELD_EXISTING_IMAGE_LIST="Existing image list"
@@ -174,7 +174,7 @@ FLEXI_FIELD_IMAGE_GALLERY_LAYOUT_DESC="Choose the Gallery Layout that you wish t
 FLEXI_FIELD_IMAGE_GALLERY_LAYOUT_MOBILE="Gallery Layout <br/><small>Mobile clients</small>"
 FLEXI_FIELD_IMAGE_GALLERY_LAYOUT_MOBILE_DESC="Choose the Gallery Layout that you wish to use when mobile clients are detected. You can select to use the same as for desktop clients"
 
-FLEXI_IMAGE_FOLDER_LOCATION="Image folder location <br/> <small> when in folder mode</small>"
+FLEXI_IMAGE_FOLDER_LOCATION="Image folder location"
 FLEXI_IMAGE_FOLDER_LOCATION_DESC="If item belongs to a translation group the use the folder of original content item"
 FLEXI_ONE_PER_ITEM="1 per item"
 FLEXI_USE_ORIGINAL_FOLDER="use original content's folder"
