--- a/plugins/flexicontent_fields/relation/en-GB.plg_flexicontent_fields_relation.ini
+++ b/plugins/flexicontent_fields/relation/en-GB.plg_flexicontent_fields_relation.ini
@@ -131,3 +131,8 @@ FLEXI_BASIC_ORDER="Ordering by default"
 FLEXI_ORDER_ORDERING="Ordering items in list"
 FLEXI_CUSTOM_ORDER="Custom ordering"
 FLEXI_EXTRA_INFO="Show extra information"
+
+FLEXI_RIFLD_INITIAL_PLACEMENT="Form fields placement"
+FLEXI_RIFLD_INITIAL_PLACEMENT_DESC="You can set this to single row to conserve space. This is initial placement, the user will be able to toggle this"
+FLEXI_RIFLD_SINGLE_ROW_FIT="Single row fit, automatic width"
+FLEXI_RIFLD_MULTI_ROW_FIT="Multiple rows fit, 100%  width"
