--- a/plugins/flexicontent_fields/toolbar/en-GB.plg_flexicontent_fields_toolbar.ini
+++ b/plugins/flexicontent_fields/toolbar/en-GB.plg_flexicontent_fields_toolbar.ini
@@ -35,7 +35,7 @@ FLEXI_FIELD_TOOLBAR_DEFAULT_LINE="Default line height"
 FLEXI_FIELD_TOOLBAR_DEFAULT_LINE_DESC="Choose a default line height in px (according to your template)"
 FLEXI_FIELD_TOOLBAR_TARGET="Container to resize"
 FLEXI_FIELD_TOOLBAR_TARGET_DESC="Choose the id of the target container within you want to allow the users to resize the text"
-FLEXI_FIELD_TOOLBAR_DISPLAY="Display parameters"
+FLEXI_FIELD_TOOLBAR_CONTROLS="Controls"
 FLEXI_FIELD_TOOLBAR_RESIZER="Resizer Controls"
 FLEXI_FIELD_TOOLBAR_RESIZER_DESC="Display/Hide Resizer Controls"
 FLEXI_FIELD_TOOLBAR_VARIOUS_CONTROLS="Various Controls"
@@ -44,7 +44,7 @@ FLEXI_FIELD_TOOLBAR_REZIZE_CONTROLS="Resize Controls"
 
 FLEXI_FIELD_TOOLBAR_SOCIAL_BUTTONS="Social Buttons (via AddThis)"
 FLEXI_FIELD_TOOLBAR_SOCIAL_POSITION="Place outside of toolbar"
-FLEXI_FIELD_TOOLBAR_CASE_A="CASE A: Predefined HTML Code"
+FLEXI_FIELD_TOOLBAR_CASE_A="Predefined HTML Code"
 FLEXI_FIELD_TOOLBAR_ADDTHIS_CODE="(Addthis) HTML Code"
 FLEXI_FIELD_TOOLBAR_ADDTHIS_CODE_DESC="A list of predefined stylese"
 FLEXI_FIELD_TOOLBAR_SOCIAL_POSITION_DESC="Place AddThis social buttons outside of toolbar. <br/> <b>Note</b> This only effects display of inline buttons and is ignored when using the floating buttons"
@@ -55,7 +55,7 @@ FLEXI_FIELD_TOOLBAR_ADDTHIS_DISPLAY_4="Horizontal (inline) Single Share Button"
 FLEXI_FIELD_TOOLBAR_ADDTHIS_DISPLAY_5="Vertical (floating) Common Counters"
 FLEXI_FIELD_TOOLBAR_ADDTHIS_DISPLAY_6="Vertical (floating) Popular Buttons 32"
 FLEXI_FIELD_TOOLBAR_ADDTHIS_DISPLAY_7="Vertical (floating) Popular Buttons 16"
-FLEXI_FIELD_TOOLBAR_CASE_B="CASE B: Custom HTML code (overrides above)"
+FLEXI_FIELD_TOOLBAR_CASE_B="Custom HTML code (overrides above)"
 FLEXI_FIELD_TOOLBAR_ADDTHIS_CODE2_DESC="Enter custom -AddThis- HTML code. First, please read AddThis online documentation, and make sure not to enter broken HTML code"
 
 FLEXI_FIELD_TOOLBAR_SITENAME="Site name"
@@ -69,8 +69,8 @@ FLEXI_TOOLBAR_ITEM_DESCRIPTION="Item's description"
 
 FLEXI_TOOLBAR_CONTENT_TYPE="Content type"
 FLEXI_TOOLBAR_CONTENT_TYPE_DESC="Select what should be suggested as content type of current page"
-FLEXI_TOOLBAR_CONTENT_TYPE_ARTICLE="Use \'article\'"
-FLEXI_TOOLBAR_CONTENT_TYPE_SITE="Use \'website\'"
+FLEXI_TOOLBAR_CONTENT_TYPE_ARTICLE="Use 'article'"
+FLEXI_TOOLBAR_CONTENT_TYPE_SITE="Use 'website'"
 
 FLEXI_TOOLBAR_CONTENT_IMAGE_DESC="Select what should be suggested as image of current page"
 FLEXI_TOOLBAR_CONTENT_IMAGE_SOURCE="Image source"
