--- a/plugins/flexicontent_fields/image/en-GB.plg_flexicontent_fields_image.ini
+++ b/plugins/flexicontent_fields/image/en-GB.plg_flexicontent_fields_image.ini
@@ -98,8 +98,8 @@ FLEXI_FIELD_GROUP_WITH_OTHER_IMAGE_FIELDS_DESC="Enabling this will make the fiel
 
 FLEXI_FIELD_IMAGE_FOLDER="Thumbnails folder <br/><small> * Folder mode creates subfolder per item</small>"
 FLEXI_FIELD_IMAGE_FOLDER_DESC="Folder where the thumbnails will be stored, <b>relative to your joomla site</b>, (No slash at the begining, no slash at the end!) <br/><br/> If <b>Folder mode</b> is enabled, then <b>subdirectories</b> will be created for every content item, and furthermore the image original files will be placed here instead of the Global FLEXIcontent document (secure) folder"
-FLEXI_FIELD_IMAGE_SOURCE_MODE="<b style='color:darkred;'>Image Source</b><br/><small> *** READ Description</small>"
-FLEXI_FIELD_IMAGE_SOURCE_MODE_DESC="<b>Do not change after values are added, folder mode recommended when creating gallery fields</b> <br/><br/>a. Use <b>DB MODE</b>, when assigning attribute images to content items that need to be <b>resused</b> by various items and <u>more options</u> are needed than those offered by <u>radio-image</u> , <u>checkbox-image</u> field TYPEs <br/><br/> e.g. attributes with descriptions and popup links, etc <br/><br/> b. Use <b>FOLDER mode</b>, when having non-reuseable images, <br/><br/> e.g an image gallery specific to each Content Item"
+FLEXI_FIELD_IMAGE_SRC_MODE="Image Source"
+FLEXI_FIELD_IMAGE_SRC_MODE_DESC="<b>Do not change after values are added, folder mode recommended when creating gallery fields</b> <br/><br/>a. Use <b>DB MODE</b>, when assigning attribute images to content items that need to be <b>resused</b> by various items and <u>more options</u> are needed than those offered by <u>radio-image</u> , <u>checkbox-image</u> field TYPEs <br/><br/> e.g. attributes with descriptions and popup links, etc <br/><br/> b. Use <b>FOLDER mode</b>, when having non-reuseable images, <br/><br/> e.g an image gallery specific to each Content Item"
 
 FLEXI_FIELD_REUSABLE_DB_MODE="Reusable (DB mode)"
 FLEXI_FIELD_ITEM_SPECIFIC_FOLDER_MODE="Item+Field Specific Folder"
@@ -120,10 +120,10 @@ FLEXI_FIELD_EXISTING_IMAGE_LIST_DESC="Configure how the existing image list is c
 FLEXI_FIELD_INCLUDE_IMAGES_UPLOADED_FIELD="Include added by *"
 FLEXI_FIELD_INCLUDE_IMAGES_UPLOADED_FIELD_DESC="Enable/disable inclusion of images uploaded by other fields or via the file manager (aka all images in the secure folder)<br/><br/> NOTE 1: image field does not store images to the DB media folder, but in the DB secure folder for the purpose of protection access to the original image files).<br/><br/>NOTE 2: You can select to automatically add _fldNN_ in thubmnail names or select to use a unique thumbnail folder, but make sure you set a unique thumbnail folder for this field !!! otherwise the fields will continuesly overwrite each other thumbnails<br/><br/> NOTE 3: If you enable selection of images that were added by any field or filemanager, then image deletion will be disabled"
 
-FLEXI_FIELD_LIMIT_TO_USER_UPLOADED="Include uploaded by <br/><small>for ... 'Any Field or Filemanager'</small>"
+FLEXI_FIELD_LIMIT_TO_USER_UPLOADED="Include uploaded by"
 FLEXI_FIELD_LIMIT_TO_USER_UPLOADED_DESC="When listing image uploaded by any field or filemanager then you can limit to only those uploaded by current user (recommeneded)"
 
-FLEXI_FIELD_UNIQUE_THUMB_METHOD="Unique thumbmnail via <br/><small>for ... 'Any Field or Filemanager'</small>"
+FLEXI_FIELD_UNIQUE_THUMB_METHOD="Unique thumbmnail via"
 FLEXI_FIELD_UNIQUE_THUMB_METHOD_DESC="When sharing images among fields we need to prevent fields from overwriting each other thumbnails.<br/><br/>You can select to either <b>automatically</b> add _fldNN_ in thubmnail names or select to use a unique thumbnail folder, which you must set above <b>manually</b>"
 
 FLEXI_FIELD_THIS_FIELD="This field"
