^ Updated CORE fields to new field configuration layout

--- a/plugins/flexicontent_fields/core/en-GB.plg_flexicontent_fields_core.ini
+++ b/plugins/flexicontent_fields/core/en-GB.plg_flexicontent_fields_core.ini
@@ -12,3 +12,4 @@ FLEXI_FAVOURED_MAXUSERS_DESC="Limits the listing of users to a reasonable maximu
 FLEXI_FAVOURED_YES_USERNAMES="Yes, Usernames"
 FLEXI_FAVOURED_YES_FULLNAMES="Yes, Fullnames"
 FLEXI_WARNING_ITEM_SPECIFIC_AS_CATEGORY_FILTER="<b>Warning, please remove field - %s - from category filters</b>:<br> Fields using item specific replacements cannot be used as category filters"
+FLEXI_VOTE_TYPES="Vote types"
