+ Added parameter toggle dependencies to all fields for common parameters such as multi-value and access message, also added support for sub-categories to the categories filter, the "sub-category items" configuration of current category will be used

--- a/plugins/flexicontent_fields/image/en-GB.plg_flexicontent_fields_image.ini
+++ b/plugins/flexicontent_fields/image/en-GB.plg_flexicontent_fields_image.ini
@@ -175,7 +175,7 @@ FLEXI_FIELD_IMAGE_GALLERY_LAYOUT_MOBILE="Gallery Layout <br/><small>Mobile clien
 FLEXI_FIELD_IMAGE_GALLERY_LAYOUT_MOBILE_DESC="Choose the Gallery Layout that you wish to use when mobile clients are detected. You can select to use the same as for desktop clients"
 
 FLEXI_IMAGE_FOLDER_LOCATION="Image folder location"
-FLEXI_IMAGE_FOLDER_LOCATION_DESC="If item belongs to a translation group the use the folder of original content item"
+FLEXI_IMAGE_FOLDER_LOCATION_DESC="If item belongs to a translation group then use the folder of original content item"
 FLEXI_ONE_PER_ITEM="1 per item"
 FLEXI_USE_ORIGINAL_FOLDER="use original content's folder"
 
