Adding option in sharevidéo filed to display field in item form

--- a/plugins/flexicontent_fields/sharedvideo/en-GB.plg_flexicontent_fields_sharedvideo.ini
+++ b/plugins/flexicontent_fields/sharedvideo/en-GB.plg_flexicontent_fields_sharedvideo.ini
@@ -27,3 +27,16 @@ PLG_FLEXICONTENT_FIELDS_SHAREDVIDEO_DURATION="Duration"
 PLG_FLEXICONTENT_FIELDS_SHAREDVIDEO_DESCRIPTION="Description"
 PLG_FLEXICONTENT_FIELDS_SHAREDVIDEO_PREVIEW="Preview"
 PLG_FLEXICONTENT_FIELDS_SHAREDVIDEO_UNABLE_TO_PARSE="Unable to parse video URL"
+
+PLG_FLEXICONTENT_FIELDS_SHAREDVIDEO_DISPLAY_TYPE_FORM="Display Type"
+PLG_FLEXICONTENT_FIELDS_SHAREDVIDEO_DISPLAY_TYPE_FORM_DESC="Display Type field in edit form"
+PLG_FLEXICONTENT_FIELDS_SHAREDVIDEO_DISPLAY_ID_FORM="Display ID"
+PLG_FLEXICONTENT_FIELDS_SHAREDVIDEO_DISPLAY_ID_FORM_DESC="Display ID field in edit form"
+PLG_FLEXICONTENT_FIELDS_SHAREDVIDEO_DISPLAY_TITLE_FORM="Display Title"
+PLG_FLEXICONTENT_FIELDS_SHAREDVIDEO_DISPLAY_TITLE_FORM_DESC="Display Title field in edit form"
+PLG_FLEXICONTENT_FIELDS_SHAREDVIDEO_DISPLAY_AUTHOR_FORM="Display Author"
+PLG_FLEXICONTENT_FIELDS_SHAREDVIDEO_DISPLAY_AUTHOR_FORM_DESC="Display Author field in edit form"
+PLG_FLEXICONTENT_FIELDS_SHAREDVIDEO_DISPLAY_DURATION_FORM="Display duration"
+PLG_FLEXICONTENT_FIELDS_SHAREDVIDEO_DISPLAY_DURATION_FORM_DESC="Display Duration field in edit form"
+PLG_FLEXICONTENT_FIELDS_SHAREDVIDEO_DISPLAY_DESCRIPTION_FORM="Display Description"
+PLG_FLEXICONTENT_FIELDS_SHAREDVIDEO_DISPLAY_DESCRIPTION_FORM_DESC="Display Description field in edit form"
