--- a/plugins/flexicontent_fields/sharedaudio/en-GB.plg_flexicontent_fields_sharedaudio.ini
+++ b/plugins/flexicontent_fields/sharedaudio/en-GB.plg_flexicontent_fields_sharedaudio.ini
@@ -27,3 +27,16 @@ PLG_FLEXICONTENT_FIELDS_SHAREDAUDIO_DURATION="Duration"
 PLG_FLEXICONTENT_FIELDS_SHAREDAUDIO_DESCRIPTION="Description"
 PLG_FLEXICONTENT_FIELDS_SHAREDAUDIO_PREVIEW="Preview"
 PLG_FLEXICONTENT_FIELDS_SHAREDAUDIO_UNABLE_TO_PARSE="Unable to parse audio URL"
+
+PLG_FLEXICONTENT_FIELDS_SHAREDAUDIO_DISPLAY_TYPE_FORM="Display Type"
+PLG_FLEXICONTENT_FIELDS_SHAREDAUDIO_DISPLAY_TYPE_FORM_DESC="Display Type field in edit form"
+PLG_FLEXICONTENT_FIELDS_SHAREDAUDIO_DISPLAY_ID_FORM="Display ID"
+PLG_FLEXICONTENT_FIELDS_SHAREDAUDIO_DISPLAY_ID_FORM_DESC="Display ID field in edit form"
+PLG_FLEXICONTENT_FIELDS_SHAREDAUDIO_DISPLAY_TITLE_FORM="Display Title"
+PLG_FLEXICONTENT_FIELDS_SHAREDAUDIO_DISPLAY_TITLE_FORM_DESC="Display Title field in edit form"
+PLG_FLEXICONTENT_FIELDS_SHAREDAUDIO_DISPLAY_AUTHOR_FORM="Display Author"
+PLG_FLEXICONTENT_FIELDS_SHAREDAUDIO_DISPLAY_AUTHOR_FORM_DESC="Display Author field in edit form"
+PLG_FLEXICONTENT_FIELDS_SHAREDAUDIO_DISPLAY_DURATION_FORM="Display duration"
+PLG_FLEXICONTENT_FIELDS_SHAREDAUDIO_DISPLAY_DURATION_FORM_DESC="Display Duration field in edit form"
+PLG_FLEXICONTENT_FIELDS_SHAREDAUDIO_DISPLAY_DESCRIPTION_FORM="Display Description"
+PLG_FLEXICONTENT_FIELDS_SHAREDAUDIO_DISPLAY_DESCRIPTION_FORM_DESC="Display Description field in edit form"
