+ Added popup image zooming capability via fancybox to the minigallery field, also further cleaned up the parameter layout of minigallery

--- a/plugins/flexicontent_fields/minigallery/en-GB.plg_flexicontent_fields_minigallery.ini
+++ b/plugins/flexicontent_fields/minigallery/en-GB.plg_flexicontent_fields_minigallery.ini
@@ -37,7 +37,7 @@ FLEXI_FIELD_GALLERY_WIDTH_LARGE_DESC="Width of the slideshow image container (th
 FLEXI_FIELD_GALLERY_WIDTH_MINI="Thumbs width"
 FLEXI_FIELD_GALLERY_WIDTH_MINI_DESC="Width of the thumbnails"
 FLEXI_FIELD_GALLERY_WIPE="Wipe"
-FLEXI_FIELD_GALLERY_IMAGES="Image Configuration"
+FLEXI_FIELD_GALLERY_IMAGES="Images"
 FLEXI_FIELD_GALLERY_IMAGES_DESC="Here you can configure image sizes, positions, etc"
 FLEXI_FIELD_DISPLAY_CONTROLS="Display controls"
 FLEXI_FIELD_DISPLAY_CONTROLS_DESC="Display controls like: play and pause buttons"
@@ -47,9 +47,7 @@ FLEXI_FIELD_DISPLAY_SCROLL_THUMBS="Scroll thumbnails"
 FLEXI_FIELD_DISPLAY_SCROLL_THUMBS_DESC="Choose how the thumbnails will be displayed"
 FLEXI_FIELD_DISPLAY_SCROLL_THUMBS_1="Scroll one row/column"
 FLEXI_FIELD_DISPLAY_SCROLL_THUMBS_0="Use multiple rows/columns"
-FLEXI_USE_CAPTIONS="Use captions"
-FLEXI_USE_CAPTIONS_DESC="Use captions"
-FLEXI_USE_CUSTOM_CAPTIONS="Use custom captions"
+
 FLEXI_FIELD_GALLERY_SLIDESHOW_TYPE="Slide show type"
 FLEXI_FIELD_GALLERY_SLIDESHOW_TYPE_DESC="Slide show type"
 FLEXI_FIELD_GALLERY_SLIDESHOW_TYPE_SLIDESHOW="Slideshow"
@@ -70,5 +68,18 @@ FLEXI_FIELD_GALERY_TRANSITION_DIRECTION_INOUT="in:out"
 FLEXI_FIELD_GALERY_TRANSITION_DIRECTION_OUTIN="out:in"
 FLEXI_FIELD_GALERY_TRANSITION_OTHER_OPTIONS="Other options"
 FLEXI_FIELD_GALERY_TRANSITION_OTHER_OPTIONS_DESC="Other options. Example: color: [\'tomato\', \'palegreen\', \'orangered\', \'aquamarine\'], overlap: false"
-FLEXI_FIELD_GALERY_TRANSITION_OTHER_OPTIONS_TRUE="true"
-FLEXI_FIELD_GALERY_TRANSITION_OTHER_OPTIONS_FALSE="false"
+
+FLEXI_FIELD_MGALLERY_POPUP_ZOOMING="Popup zooming"
+FLEXI_FIELD_MGALLERY_ADD_POPUP_JS="Add Popup JS"
+FLEXI_FIELD_MGALLERY_ADD_POPUP_JS_DESC="Select to allow image zooming inside a popup window when clicking the current slideshow image (inline previewer)"
+
+FLEXI_FIELD_MGALLERY_POPUP_GALLERY="Popup gallery"
+FLEXI_FIELD_MGALLERY_POPUP_GALLERY_DESC="Select the popup gallery to use"
+
+FLEXI_FIELD_MGALLERY_INLINE_PREVIEWING="Inline Previewing"
+
+FLEXI_FIELD_MGALLERY_CAPTIONS="Captions"
+FLEXI_FIELD_MGALLERY_USE_CAPTIONS="Use captions"
+FLEXI_FIELD_MGALLERY_USE_CAPTIONS_DESC="Select to include captions during inline previewing but also in the popup image zooming"
+FLEXI_FIELD_MGALLERY_CUSTOM_CAPTION="Custom caption"
+FLEXI_FIELD_MGALLERY_CUSTOM_CAPTION_DESC="Enter a custom caption to be used for ALL images"
