update missing langage string

--- a/plugins/flexicontent_fields/image/en-GB.plg_flexicontent_fields_image.ini
+++ b/plugins/flexicontent_fields/image/en-GB.plg_flexicontent_fields_image.ini
@@ -182,3 +182,6 @@ FLEXI_USE_ORIGINAL_FOLDER="use original content's folder"
 FLEXI_ALTERN_TEXT="Alternative Text"
 FLEXI_TOOLTIP_TITLE="Tooltip Title"
 FLEXI_TOOLTIP_DESCRIPTION="Tooltip Description"
+
+FLEXI_FIELD_IMAGE_SOURCE_MODE="Image Source"
+FLEXI_FIELD_IMAGE_SOURCE_MODE_DESC="Clic here to select image source for this field"
