--- a/plugins/flexicontent_fields/relation/en-GB.plg_flexicontent_fields_relation.ini
+++ b/plugins/flexicontent_fields/relation/en-GB.plg_flexicontent_fields_relation.ini
@@ -114,8 +114,8 @@ FLEXI_RIFLD_TOTAL_HIDE_ZERO_DESC="Enable to hide total if zero values found"
 FLEXI_RIFLD_TOTAL_SHOW_AUTO_BTN="Auto-relate button"
 FLEXI_RIFLD_TOTAL_SHOW_AUTO_BTN_DESC="Enable to also show the auto-relate submit button, (if enabled and configured above)"
 
-FLEXI_RIFLD_TOTAL_SHOW_LIST="Related item list"
-FLEXI_RIFLD_TOTAL_SHOW_LIST_DESC="Enable to also show item list, (below you can override item list configuration)"
+FLEXI_RIFLD_TOTAL_SHOW_LIST="Related items list"
+FLEXI_RIFLD_TOTAL_SHOW_LIST_DESC="Enable to also show items list, (below you can override item list configuration)"
 
 FLEXI_ADD_RELATED="Add related"
 FLEXI_RELATION_ADD="Add"
