# Updated Address international field to add language strings for 249 countries, and also USA states in english, also some minor fixes for item form buttons (add a tooltip in backend and fixed apply button cannot be disabled in frontend item form)

--- a/plugins/flexicontent_fields/addressint/en-GB.plg_flexicontent_fields_addressint.ini
+++ b/plugins/flexicontent_fields/addressint/en-GB.plg_flexicontent_fields_addressint.ini
@@ -50,3 +50,253 @@ PLG_FLEXICONTENT_FIELDS_ADDRESSINT_NON_US_STATE_PROVINCE="State/Province (non US
 PLG_FLEXICONTENT_FIELDS_ADDRESSINT_ZIP_POSTAL_CODE="ZIP Code/Postal Code"
 PLG_FLEXICONTENT_FIELDS_ADDRESSINT_COUNTRY="Country"
 PLG_FLEXICONTENT_FIELDS_ADDRESSINT_GEOLOCATE="Geolocate"
+
+PLG_FC_ADDRESSINT_CC_AF="Afghanistan"
+PLG_FC_ADDRESSINT_CC_AX="&Aring;land Islands"
+PLG_FC_ADDRESSINT_CC_AL="Albania"
+PLG_FC_ADDRESSINT_CC_DZ="Algeria"
+PLG_FC_ADDRESSINT_CC_AS="American Samoa"
+PLG_FC_ADDRESSINT_CC_AD="Andorra"
+PLG_FC_ADDRESSINT_CC_AO="Angola"
+PLG_FC_ADDRESSINT_CC_AI="Anguilla"
+PLG_FC_ADDRESSINT_CC_AQ="Antarctica"
+PLG_FC_ADDRESSINT_CC_AG="Antigua and Barbuda"
+PLG_FC_ADDRESSINT_CC_AR="Argentina"
+PLG_FC_ADDRESSINT_CC_AM="Armenia"
+PLG_FC_ADDRESSINT_CC_AW="Aruba"
+PLG_FC_ADDRESSINT_CC_AU="Australia"
+PLG_FC_ADDRESSINT_CC_AT="Austria"
+PLG_FC_ADDRESSINT_CC_AZ="Azerbaijan"
+PLG_FC_ADDRESSINT_CC_BS="Bahamas"
+PLG_FC_ADDRESSINT_CC_BH="Bahrain"
+PLG_FC_ADDRESSINT_CC_BD="Bangladesh"
+PLG_FC_ADDRESSINT_CC_BB="Barbados"
+PLG_FC_ADDRESSINT_CC_BY="Belarus"
+PLG_FC_ADDRESSINT_CC_BE="Belgium"
+PLG_FC_ADDRESSINT_CC_BZ="Belize"
+PLG_FC_ADDRESSINT_CC_BJ="Benin"
+PLG_FC_ADDRESSINT_CC_BM="Bermuda"
+PLG_FC_ADDRESSINT_CC_BT="Bhutan"
+PLG_FC_ADDRESSINT_CC_BO="Bolivia, Plurinational State of"
+PLG_FC_ADDRESSINT_CC_BQ="Bonaire, Sint Eustatius and Saba"
+PLG_FC_ADDRESSINT_CC_BA="Bosnia and Herzegovina"
+PLG_FC_ADDRESSINT_CC_BW="Botswana"
+PLG_FC_ADDRESSINT_CC_BV="Bouvet Island"
+PLG_FC_ADDRESSINT_CC_BR="Brazil"
+PLG_FC_ADDRESSINT_CC_IO="British Indian Ocean Territory"
+PLG_FC_ADDRESSINT_CC_BN="Brunei Darussalam"
+PLG_FC_ADDRESSINT_CC_BG="Bulgaria"
+PLG_FC_ADDRESSINT_CC_BF="Burkina Faso"
+PLG_FC_ADDRESSINT_CC_BI="Burundi"
+PLG_FC_ADDRESSINT_CC_KH="Cambodia"
+PLG_FC_ADDRESSINT_CC_CM="Cameroon"
+PLG_FC_ADDRESSINT_CC_CA="Canada"
+PLG_FC_ADDRESSINT_CC_CV="Cape Verde"
+PLG_FC_ADDRESSINT_CC_KY="Cayman Islands"
+PLG_FC_ADDRESSINT_CC_CF="Central African Republic"
+PLG_FC_ADDRESSINT_CC_TD="Chad"
+PLG_FC_ADDRESSINT_CC_CL="Chile"
+PLG_FC_ADDRESSINT_CC_CN="China"
+PLG_FC_ADDRESSINT_CC_CX="Christmas Island"
+PLG_FC_ADDRESSINT_CC_CC="Cocos (Keeling) Islands"
+PLG_FC_ADDRESSINT_CC_CO="Colombia"
+PLG_FC_ADDRESSINT_CC_KM="Comoros"
+PLG_FC_ADDRESSINT_CC_CG="Congo"
+PLG_FC_ADDRESSINT_CC_CD="Congo, the Democratic Republic of the"
+PLG_FC_ADDRESSINT_CC_CK="Cook Islands"
+PLG_FC_ADDRESSINT_CC_CR="Costa Rica"
+PLG_FC_ADDRESSINT_CC_CI="C&ocirc;te d\'Ivoire"
+PLG_FC_ADDRESSINT_CC_HR="Croatia"
+PLG_FC_ADDRESSINT_CC_CU="Cuba"
+PLG_FC_ADDRESSINT_CC_CW="Cura&ccedil;ao"
+PLG_FC_ADDRESSINT_CC_CY="Cyprus"
+PLG_FC_ADDRESSINT_CC_CZ="Czech Republic"
+PLG_FC_ADDRESSINT_CC_DK="Denmark"
+PLG_FC_ADDRESSINT_CC_DJ="Djibouti"
+PLG_FC_ADDRESSINT_CC_DM="Dominica"
+PLG_FC_ADDRESSINT_CC_DO="Dominican Republic"
+PLG_FC_ADDRESSINT_CC_EC="Ecuador"
+PLG_FC_ADDRESSINT_CC_EG="Egypt"
+PLG_FC_ADDRESSINT_CC_SV="El Salvador"
+PLG_FC_ADDRESSINT_CC_GQ="Equatorial Guinea"
+PLG_FC_ADDRESSINT_CC_ER="Eritrea"
+PLG_FC_ADDRESSINT_CC_EE="Estonia"
+PLG_FC_ADDRESSINT_CC_ET="Ethiopia"
+PLG_FC_ADDRESSINT_CC_FK="Falkland Islands (Malvinas)"
+PLG_FC_ADDRESSINT_CC_FO="Faroe Islands"
+PLG_FC_ADDRESSINT_CC_FJ="Fiji"
+PLG_FC_ADDRESSINT_CC_FI="Finland"
+PLG_FC_ADDRESSINT_CC_FR="France"
+PLG_FC_ADDRESSINT_CC_GF="French Guiana"
+PLG_FC_ADDRESSINT_CC_PF="French Polynesia"
+PLG_FC_ADDRESSINT_CC_TF="French Southern Territories"
+PLG_FC_ADDRESSINT_CC_GA="Gabon"
+PLG_FC_ADDRESSINT_CC_GM="Gambia"
+PLG_FC_ADDRESSINT_CC_GE="Georgia"
+PLG_FC_ADDRESSINT_CC_DE="Germany"
+PLG_FC_ADDRESSINT_CC_GH="Ghana"
+PLG_FC_ADDRESSINT_CC_GI="Gibraltar"
+PLG_FC_ADDRESSINT_CC_GR="Greece"
+PLG_FC_ADDRESSINT_CC_GL="Greenland"
+PLG_FC_ADDRESSINT_CC_GD="Grenada"
+PLG_FC_ADDRESSINT_CC_GP="Guadeloupe"
+PLG_FC_ADDRESSINT_CC_GU="Guam"
+PLG_FC_ADDRESSINT_CC_GT="Guatemala"
+PLG_FC_ADDRESSINT_CC_GG="Guernsey"
+PLG_FC_ADDRESSINT_CC_GN="Guinea"
+PLG_FC_ADDRESSINT_CC_GW="Guinea-Bissau"
+PLG_FC_ADDRESSINT_CC_GY="Guyana"
+PLG_FC_ADDRESSINT_CC_HT="Haiti"
+PLG_FC_ADDRESSINT_CC_HM="Heard Island and McDonald Islands"
+PLG_FC_ADDRESSINT_CC_VA="Holy See (Vatican City State)"
+PLG_FC_ADDRESSINT_CC_HN="Honduras"
+PLG_FC_ADDRESSINT_CC_HK="Hong Kong"
+PLG_FC_ADDRESSINT_CC_HU="Hungary"
+PLG_FC_ADDRESSINT_CC_IS="Iceland"
+PLG_FC_ADDRESSINT_CC_IN="India"
+PLG_FC_ADDRESSINT_CC_ID="Indonesia"
+PLG_FC_ADDRESSINT_CC_IR="Iran, Islamic Republic of"
+PLG_FC_ADDRESSINT_CC_IQ="Iraq"
+PLG_FC_ADDRESSINT_CC_IE="Ireland"
+PLG_FC_ADDRESSINT_CC_IM="Isle of Man"
+PLG_FC_ADDRESSINT_CC_IL="Israel"
+PLG_FC_ADDRESSINT_CC_IT="Italy"
+PLG_FC_ADDRESSINT_CC_JM="Jamaica"
+PLG_FC_ADDRESSINT_CC_JP="Japan"
+PLG_FC_ADDRESSINT_CC_JE="Jersey"
+PLG_FC_ADDRESSINT_CC_JO="Jordan"
+PLG_FC_ADDRESSINT_CC_KZ="Kazakhstan"
+PLG_FC_ADDRESSINT_CC_KE="Kenya"
+PLG_FC_ADDRESSINT_CC_KI="Kiribati"
+PLG_FC_ADDRESSINT_CC_KP="Korea, Democratic People\'s Republic of"
+PLG_FC_ADDRESSINT_CC_KR="Korea, Republic of"
+PLG_FC_ADDRESSINT_CC_KW="Kuwait"
+PLG_FC_ADDRESSINT_CC_KG="Kyrgyzstan"
+PLG_FC_ADDRESSINT_CC_LA="Lao People\'s Democratic Republic"
+PLG_FC_ADDRESSINT_CC_LV="Latvia"
+PLG_FC_ADDRESSINT_CC_LB="Lebanon"
+PLG_FC_ADDRESSINT_CC_LS="Lesotho"
+PLG_FC_ADDRESSINT_CC_LR="Liberia"
+PLG_FC_ADDRESSINT_CC_LY="Libya"
+PLG_FC_ADDRESSINT_CC_LI="Liechtenstein"
+PLG_FC_ADDRESSINT_CC_LT="Lithuania"
+PLG_FC_ADDRESSINT_CC_LU="Luxembourg"
+PLG_FC_ADDRESSINT_CC_MO="Macao"
+PLG_FC_ADDRESSINT_CC_MK="Macedonia, the former Yugoslav Republic of"
+PLG_FC_ADDRESSINT_CC_MG="Madagascar"
+PLG_FC_ADDRESSINT_CC_MW="Malawi"
+PLG_FC_ADDRESSINT_CC_MY="Malaysia"
+PLG_FC_ADDRESSINT_CC_MV="Maldives"
+PLG_FC_ADDRESSINT_CC_ML="Mali"
+PLG_FC_ADDRESSINT_CC_MT="Malta"
+PLG_FC_ADDRESSINT_CC_MH="Marshall Islands"
+PLG_FC_ADDRESSINT_CC_MQ="Martinique"
+PLG_FC_ADDRESSINT_CC_MR="Mauritania"
+PLG_FC_ADDRESSINT_CC_MU="Mauritius"
+PLG_FC_ADDRESSINT_CC_YT="Mayotte"
+PLG_FC_ADDRESSINT_CC_MX="Mexico"
+PLG_FC_ADDRESSINT_CC_FM="Micronesia, Federated States of"
+PLG_FC_ADDRESSINT_CC_MD="Moldova, Republic of"
+PLG_FC_ADDRESSINT_CC_MC="Monaco"
+PLG_FC_ADDRESSINT_CC_MN="Mongolia"
+PLG_FC_ADDRESSINT_CC_ME="Montenegro"
+PLG_FC_ADDRESSINT_CC_MS="Montserrat"
+PLG_FC_ADDRESSINT_CC_MA="Morocco"
+PLG_FC_ADDRESSINT_CC_MZ="Mozambique"
+PLG_FC_ADDRESSINT_CC_MM="Myanmar"
+PLG_FC_ADDRESSINT_CC_NA="Namibia"
+PLG_FC_ADDRESSINT_CC_NR="Nauru"
+PLG_FC_ADDRESSINT_CC_NP="Nepal"
+PLG_FC_ADDRESSINT_CC_NL="Netherlands"
+PLG_FC_ADDRESSINT_CC_NC="New Caledonia"
+PLG_FC_ADDRESSINT_CC_NZ="New Zealand"
+PLG_FC_ADDRESSINT_CC_NI="Nicaragua"
+PLG_FC_ADDRESSINT_CC_NE="Niger"
+PLG_FC_ADDRESSINT_CC_NG="Nigeria"
+PLG_FC_ADDRESSINT_CC_NU="Niue"
+PLG_FC_ADDRESSINT_CC_NF="Norfolk Island"
+PLG_FC_ADDRESSINT_CC_MP="Northern Mariana Islands"
+PLG_FC_ADDRESSINT_CC_NO="Norway"
+PLG_FC_ADDRESSINT_CC_OM="Oman"
+PLG_FC_ADDRESSINT_CC_PK="Pakistan"
+PLG_FC_ADDRESSINT_CC_PW="Palau"
+PLG_FC_ADDRESSINT_CC_PS="Palestinian Territory, Occupied"
+PLG_FC_ADDRESSINT_CC_PA="Panama"
+PLG_FC_ADDRESSINT_CC_PG="Papua New Guinea"
+PLG_FC_ADDRESSINT_CC_PY="Paraguay"
+PLG_FC_ADDRESSINT_CC_PE="Peru"
+PLG_FC_ADDRESSINT_CC_PH="Philippines"
+PLG_FC_ADDRESSINT_CC_PN="Pitcairn"
+PLG_FC_ADDRESSINT_CC_PL="Poland"
+PLG_FC_ADDRESSINT_CC_PT="Portugal"
+PLG_FC_ADDRESSINT_CC_PR="Puerto Rico"
+PLG_FC_ADDRESSINT_CC_QA="Qatar"
+PLG_FC_ADDRESSINT_CC_RE="R&eacute;union"
+PLG_FC_ADDRESSINT_CC_RO="Romania"
+PLG_FC_ADDRESSINT_CC_RU="Russian Federation"
+PLG_FC_ADDRESSINT_CC_RW="Rwanda"
+PLG_FC_ADDRESSINT_CC_BL="Saint Barth&eacute;lemy"
+PLG_FC_ADDRESSINT_CC_SH="Saint Helena, Ascension and Tristan da Cunha"
+PLG_FC_ADDRESSINT_CC_KN="Saint Kitts and Nevis"
+PLG_FC_ADDRESSINT_CC_LC="Saint Lucia"
+PLG_FC_ADDRESSINT_CC_MF="Saint Martin (French part)"
+PLG_FC_ADDRESSINT_CC_PM="Saint Pierre and Miquelon"
+PLG_FC_ADDRESSINT_CC_VC="Saint Vincent and the Grenadines"
+PLG_FC_ADDRESSINT_CC_WS="Samoa"
+PLG_FC_ADDRESSINT_CC_SM="San Marino"
+PLG_FC_ADDRESSINT_CC_ST="Sao Tome and Principe"
+PLG_FC_ADDRESSINT_CC_SA="Saudi Arabia"
+PLG_FC_ADDRESSINT_CC_SN="Senegal"
+PLG_FC_ADDRESSINT_CC_RS="Serbia"
+PLG_FC_ADDRESSINT_CC_SC="Seychelles"
+PLG_FC_ADDRESSINT_CC_SL="Sierra Leone"
+PLG_FC_ADDRESSINT_CC_SG="Singapore"
+PLG_FC_ADDRESSINT_CC_SX="Sint Maarten (Dutch part)"
+PLG_FC_ADDRESSINT_CC_SK="Slovakia"
+PLG_FC_ADDRESSINT_CC_SI="Slovenia"
+PLG_FC_ADDRESSINT_CC_SB="Solomon Islands"
+PLG_FC_ADDRESSINT_CC_SO="Somalia"
+PLG_FC_ADDRESSINT_CC_ZA="South Africa"
+PLG_FC_ADDRESSINT_CC_GS="South Georgia and the South Sandwich Islands"
+PLG_FC_ADDRESSINT_CC_SS="South Sudan"
+PLG_FC_ADDRESSINT_CC_ES="Spain"
+PLG_FC_ADDRESSINT_CC_LK="Sri Lanka"
+PLG_FC_ADDRESSINT_CC_SD="Sudan"
+PLG_FC_ADDRESSINT_CC_SR="Suriname"
+PLG_FC_ADDRESSINT_CC_SJ="Svalbard and Jan Mayen"
+PLG_FC_ADDRESSINT_CC_SZ="Swaziland"
+PLG_FC_ADDRESSINT_CC_SE="Sweden"
+PLG_FC_ADDRESSINT_CC_CH="Switzerland"
+PLG_FC_ADDRESSINT_CC_SY="Syrian Arab Republic"
+PLG_FC_ADDRESSINT_CC_TW="Taiwan, Province of China"
+PLG_FC_ADDRESSINT_CC_TJ="Tajikistan"
+PLG_FC_ADDRESSINT_CC_TZ="Tanzania, United Republic of"
+PLG_FC_ADDRESSINT_CC_TH="Thailand"
+PLG_FC_ADDRESSINT_CC_TL="Timor-Leste"
+PLG_FC_ADDRESSINT_CC_TG="Togo"
+PLG_FC_ADDRESSINT_CC_TK="Tokelau"
+PLG_FC_ADDRESSINT_CC_TO="Tonga"
+PLG_FC_ADDRESSINT_CC_TT="Trinidad and Tobago"
+PLG_FC_ADDRESSINT_CC_TN="Tunisia"
+PLG_FC_ADDRESSINT_CC_TR="Turkey"
+PLG_FC_ADDRESSINT_CC_TM="Turkmenistan"
+PLG_FC_ADDRESSINT_CC_TC="Turks and Caicos Islands"
+PLG_FC_ADDRESSINT_CC_TV="Tuvalu"
+PLG_FC_ADDRESSINT_CC_UG="Uganda"
+PLG_FC_ADDRESSINT_CC_UA="Ukraine"
+PLG_FC_ADDRESSINT_CC_AE="United Arab Emirates"
+PLG_FC_ADDRESSINT_CC_GB="United Kingdom"
+PLG_FC_ADDRESSINT_CC_US="United States"
+PLG_FC_ADDRESSINT_CC_UM="United States Minor Outlying Islands"
+PLG_FC_ADDRESSINT_CC_UY="Uruguay"
+PLG_FC_ADDRESSINT_CC_UZ="Uzbekistan"
+PLG_FC_ADDRESSINT_CC_VU="Vanuatu"
+PLG_FC_ADDRESSINT_CC_VE="Venezuela, Bolivarian Republic of"
+PLG_FC_ADDRESSINT_CC_VN="Viet Nam"
+PLG_FC_ADDRESSINT_CC_VG="Virgin Islands, British"
+PLG_FC_ADDRESSINT_CC_VI="Virgin Islands, U.S."
+PLG_FC_ADDRESSINT_CC_WF="Wallis and Futuna"
+PLG_FC_ADDRESSINT_CC_EH="Western Sahara"
+PLG_FC_ADDRESSINT_CC_YE="Yemen"
+PLG_FC_ADDRESSINT_CC_ZM="Zambia"
+PLG_FC_ADDRESSINT_CC_ZW="Zimbabwe"
