--- a/plugins/flexicontent_fields/fieldgroup/en-GB.plg_flexicontent_fields_fieldgroup.ini
+++ b/plugins/flexicontent_fields/fieldgroup/en-GB.plg_flexicontent_fields_fieldgroup.ini
@@ -5,5 +5,10 @@
 ; Note : All ini files need to be saved as UTF-8
 
 FLEXI_FIELD_FIELDGROUP="Fieldgroup Field Plugin for FLEXIcontent"
-
 FLEXI_FIELD_FIELDGROUP_USAGE="<small>This field displays other fields as multi-value group of fields in item form when viewing the field values too</small>"
+
+FLEXI_USE_CUSTOMIZED_HTML="Use customized HTML"
+FLEXI_USE_CUSTOMIZED_HTML_DESC="Select to display default or custom HTML specified below <br/><br/>- default HTML inlcudes all fields of the group and their labels"
+
+FLEXI_FIELD_GROUP_CUSTOM_HTML="Custom HTML"
+FLEXI_FIELD_GROUP_CUSTOM_HTML_DESC="Leave blank for default, which include all fields with their labels,<br/> - or you can use custom HTML which supports: <br/><br/><b>NOTE:</b> you can use: <br/><br/> <b>{{fieldname}}</b> or <b>{{fieldname##displayvar}}</b> <br/> -- is replaced with HTML display of each field  <br/><br/> <b>{{fieldname##label}}</b> <br/> -- is replaced with label of each field <br/><br/><b>%%language_string%%</b><br/> -- is replaced with the language string"
