+ Allowed file removal for file inline mode, and also file cleanup (delete old one) when new file is uploaded, also added support for form layout templating (2 layouts available: inline-boxes and table)

--- a/plugins/flexicontent_fields/file/en-GB.plg_flexicontent_fields_file.ini
+++ b/plugins/flexicontent_fields/file/en-GB.plg_flexicontent_fields_file.ini
@@ -146,3 +146,13 @@ FLEXI_CONTENT_OWNER="to content item owner"
 FLEXI_CONTENT_OWNER_DESC="Send email to owner of the content item that contains the downloaded file"
 FLEXI_EMAIL_FIELD="to emails of EMAIL field"
 FLEXI_EMAIL_FIELD_DESC="The email field must have value(s) in the SAME content item that the file field is contained, e.g. both file field and email field are displayed inside item 'A'"
+
+FLEXI_FIELD_FILE_ABOUT_SELECTED_FILE="Selected File"
+FLEXI_FIELD_FILE_ABOUT_SELECTED_FILE_DESC="You can replace an already selected file by a new one"
+FLEXI_FIELD_FILE_ABOUT_REMOVE_FILE="Remove file"
+FLEXI_FIELD_FILE_ABOUT_REMOVE_FILE_DESC="You can remove the already selected file"
+FLEXI_FIELD_FILE_FILE_UNPUBLISHED="File Unpublished"
+FLEXI_FIELD_FILE_FILE_UNPUBLISHED_DESC="File will not be displayed in frontend because it was unpublished"
+
+FLEXI_FIELD_FILE_ALLOW_FILE_REMOVAL="Allow removal"
+FLEXI_FIELD_FILE_ALLOW_FILE_REMOVAL_DESC="This will allow user to de-select and remove file from the disk without uploading a new one"
