+ Added missing item form templating files for file field (not included by mistake in last commit), fixed a bug in image field not linking to item details view when field is displayed in category view, also adding a parameter to control adding the link

--- a/plugins/flexicontent_fields/image/en-GB.plg_flexicontent_fields_image.ini
+++ b/plugins/flexicontent_fields/image/en-GB.plg_flexicontent_fields_image.ini
@@ -169,7 +169,7 @@ FLEXI_TOGGLE_ALL_THUMBS="Toggle All Thumbnails"
 FLEXI_FIELD_IMAGE_THUBMNAILS_ADD_JS_GALLERY="Add JS Gallery <br/><small>(Popup or Inline)</small>"
 FLEXI_FIELD_IMAGE_THUBMNAILS_ADD_JS_GALLERY_DESC="Choose to <b>either</b> display a PLAIN thumbnail list <b>or</b> place your thumbnails inside a popup/inline/other Gallery Layout <br/><br/>-- The <b>Gallery Layout</b> will allow opening the thumbnails in a popup or inline (manual or automatic) image slideshow / carousel"
 
-FLEXI_FIELD_IMAGE_GALLERY_LAYOUT="<b style='color:darkred;'>Gallery Layout</b> <br/><small>(Desktop clients)</small>"
+FLEXI_FIELD_IMAGE_GALLERY_LAYOUT="Gallery Layout <br/><small>(Desktop clients)</small>"
 FLEXI_FIELD_IMAGE_GALLERY_LAYOUT_DESC="Choose the Gallery Layout that you wish to use"
 FLEXI_FIELD_IMAGE_GALLERY_LAYOUT_MOBILE="Gallery Layout <br/><small>Mobile clients</small>"
 FLEXI_FIELD_IMAGE_GALLERY_LAYOUT_MOBILE_DESC="Choose the Gallery Layout that you wish to use when mobile clients are detected. You can select to use the same as for desktop clients"
@@ -185,3 +185,12 @@ FLEXI_TOOLTIP_DESCRIPTION="Tooltip Description"
 
 FLEXI_FIELD_IMAGE_SOURCE_MODE="Image Source"
 FLEXI_FIELD_IMAGE_SOURCE_MODE_DESC="Clic here to select image source for this field"
+
+FLEXI_FIELD_IMAGE_ITEM_VIEW_DISPLAY_METHOD="Display method"
+FLEXI_FIELD_IMAGE_ITEM_VIEW_DISPLAY_METHOD_DESC="Default display method for the view"
+FLEXI_FIELD_IMAGE_CAT_CONTENT_LISTS="Category (content lists)"
+FLEXI_FIELD_IMAGE_CAT_VIEW_DISPLAY_METHOD="Display method"
+FLEXI_FIELD_IMAGE_CAT_VIEW_DISPLAY_METHOD_DESC="Default display method for the mulit-item listings, usually you will want to display a single image that links to the item details view"
+
+FLEXI_FIELD_IMAGE_SINGLE_MODE_LINK_TO_ITEM="Link to item"
+FLEXI_FIELD_IMAGE_SINGLE_MODE_LINK_TO_ITEM_DESC="Usually when you display the field as single thumbnail in category view, you would also want to link to the item details view"
