^ Modified toolbar field to be usable in multi-item views (category / module)

--- a/plugins/flexicontent_fields/toolbar/en-GB.plg_flexicontent_fields_toolbar.ini
+++ b/plugins/flexicontent_fields/toolbar/en-GB.plg_flexicontent_fields_toolbar.ini
@@ -56,7 +56,7 @@ FLEXI_FIELD_TOOLBAR_ADDTHIS_DISPLAY_5="Vertical (floating) Common Counters"
 FLEXI_FIELD_TOOLBAR_ADDTHIS_DISPLAY_6="Vertical (floating) Popular Buttons 32"
 FLEXI_FIELD_TOOLBAR_ADDTHIS_DISPLAY_7="Vertical (floating) Popular Buttons 16"
 FLEXI_FIELD_TOOLBAR_CASE_B="Custom HTML code (overrides above)"
-FLEXI_FIELD_TOOLBAR_ADDTHIS_CODE2_DESC="Enter custom -AddThis- HTML code. First, please read AddThis online documentation, and make sure not to enter broken HTML code"
+FLEXI_FIELD_TOOLBAR_ADDTHIS_CODE2_DESC="Enter custom -AddThis- HTML code. First, please read AddThis online documentation, and make sure not to enter broken HTML code, for item URL use addthis:url='_item_url_' for item title addthis:title='_item_title_'"
 
 FLEXI_FIELD_TOOLBAR_SITENAME="Site name"
 FLEXI_FIELD_TOOLBAR_SITENAME_DESC="Select what should be suggested as site name of current page"
