--- a/plugins/flexicontent_fields/core/en-GB.plg_flexicontent_fields_core.ini
+++ b/plugins/flexicontent_fields/core/en-GB.plg_flexicontent_fields_core.ini
@@ -15,4 +15,14 @@ FLEXI_FAVOURED_YES_FULLNAMES="Yes, Fullnames"
 
 FLEXI_WARNING_ITEM_SPECIFIC_AS_CATEGORY_FILTER="<b>Warning, please remove field - %s - from category filters</b>:<br> Fields using item specific replacements cannot be used as category filters"
 
+; v3.0 Voting improvements
 FLEXI_VOTE_AVERAGE_RATING="Average rating"
+FLEXI_VOTE_YOUR_RATING="Your rating"
+FLEXI_VOTE_PLEASE_COMPLETE_VOTING="You have completed: %s out of %s. Complete all to make you voting permanent"
+FLEXI_VOTE_YOUR_OLD_RATING_WAS_CHANGED="Your old rating was changed"
+FLEXI_VOTE_YOUR_OLD_AVERAGE_RATING_WAS_UPDATED="Your old average rating was updated"
+FLEXI_VOTE_YOUR_AVERAGE_RATING_STORED="Your average rating was stored"
+FLEXI_VOTE_AVERAGE_RATING_UPDATED="Updated"
+FLEXI_VOTE_AVERAGE_RATING_SUBMITTED="Submitted"
+FLEXI_VOTE_AVERAGE_RATING_CALCULATED_AUTOMATICALLY="Voting average will be calculated out of the voting characteristics, please complete them ALL"
+FLEXI_VOTE_COMPOSITE_VOTING_IS_DISABLED="Composite voting characteristics are disabled"
