--- a/plugins/flexicontent_fields/fieldgroup/en-GB.plg_flexicontent_fields_fieldgroup.ini
+++ b/plugins/flexicontent_fields/fieldgroup/en-GB.plg_flexicontent_fields_fieldgroup.ini
@@ -12,3 +12,16 @@ FLEXI_USE_CUSTOMIZED_HTML_DESC="Select to display default or custom HTML specifi
 
 FLEXI_FIELD_GROUP_CUSTOM_HTML="Custom HTML"
 FLEXI_FIELD_GROUP_CUSTOM_HTML_DESC="Leave blank for default, which include all fields with their labels,<br/> - or you can use custom HTML which supports: <br/><br/><b>NOTE:</b> you can use: <br/><br/> <b>{{fieldname}}</b> or <b>{{fieldname##displayvar}}</b> <br/> -- is replaced with HTML display of each field  <br/><br/> <b>{{fieldname##label}}</b> <br/> -- is replaced with label of each field <br/><br/><b>%%language_string%%</b><br/> -- is replaced with the language string"
+
+FLEXI_FIELD_GROUP_EDIT_DETAILS="Edit details"
+FLEXI_FIELD_GROUP_HIDE_DETAILS="Hide details"
+
+FLEXI_FIELD_GROUP_ALL_VALS_TOGGLING="All values toggling"
+FLEXI_FIELD_GROUP_ALL_VALS_TOGGLING_DESC="Enable this to show an all values toggler button"
+FLEXI_FIELD_GROUP_VALS_TOGGLING="Values toggling"
+FLEXI_FIELD_GROUP_VALS_TOGGLING_DESC="Enable this to compact the display of every fieldgroup value, and save space"
+
+FLEXI_FIELD_GROUP_ALWAYS_VISIBLE_FIELDS="Fields always visible"
+FLEXI_FIELD_GROUP_ALWAYS_VISIBLE_FIELDS_DESC="You should select some fields to be always visible thus these will serve as a 'title' or 'referance' for easily finding a value, example if field group is a 'contanct' then 'Firstname' and 'Lastname' should always be visible"
+
+FLEXI_FIELD_GROUP_TOGGLE_VALUES="Toggle values"
