Fixed hide/show all values of field group not working in chrome

--- a/plugins/flexicontent_fields/fieldgroup/en-GB.plg_flexicontent_fields_fieldgroup.ini
+++ b/plugins/flexicontent_fields/fieldgroup/en-GB.plg_flexicontent_fields_fieldgroup.ini
@@ -24,4 +24,5 @@ FLEXI_FIELD_GROUP_VALS_TOGGLING_DESC="Enable this to compact the display of ever
 FLEXI_FIELD_GROUP_ALWAYS_VISIBLE_FIELDS="Fields always visible"
 FLEXI_FIELD_GROUP_ALWAYS_VISIBLE_FIELDS_DESC="You should select some fields to be always visible thus these will serve as a 'title' or 'referance' for easily finding a value, example if field group is a 'contanct' then 'Firstname' and 'Lastname' should always be visible"
 
-FLEXI_FIELD_GROUP_TOGGLE_VALUES="Toggle values"
+FLEXI_FIELD_GROUP_SHOW_VALUES="Show values"
+FLEXI_FIELD_GROUP_HIDE_VALUES="Hide values"
