Fixed image field to be able to link to item in category view while being inside a field group, fixed textselect field to be able to use custom values or SQL query for creating filtering values, also added support for reversing filter values order

--- a/plugins/flexicontent_fields/image/en-GB.plg_flexicontent_fields_image.ini
+++ b/plugins/flexicontent_fields/image/en-GB.plg_flexicontent_fields_image.ini
@@ -133,7 +133,7 @@ FLEXI_FIELD_CURRENT_USER="Current user"
 FLEXI_FIELD_ANY_USER="Any user"
 
 FLEXI_FIELD_UNIQUE_THUMB_FIELD_ID="Field id (automatic)"
-FLEXI_FIELD_UNIQUE_THUMB_FOLDER="Thumb Folder (set above Manually)"
+FLEXI_FIELD_UNIQUE_THUMB_FOLDER_IN_THUMBS_TAB="Thumb Folder (set in Thumbnails TAB)"
 
 FLEXI_BASIC_PARAMS_IMAGE_HANDLING_LABEL="Image Handling"
 FLEXI_FIELD_GALLERY_MODE="Acts as gallery <br/> (multi-value)"
