Multi-value and fieldgroup support for file field, multi-value inline editing for file properties for fields: file, minigallery

--- a/plugins/flexicontent_fields/minigallery/en-GB.plg_flexicontent_fields_minigallery.ini
+++ b/plugins/flexicontent_fields/minigallery/en-GB.plg_flexicontent_fields_minigallery.ini
@@ -83,3 +83,18 @@ FLEXI_FIELD_MGALLERY_USE_CAPTIONS="Use captions"
 FLEXI_FIELD_MGALLERY_USE_CAPTIONS_DESC="Select to include captions during inline previewing but also in the popup image zooming"
 FLEXI_FIELD_MGALLERY_CUSTOM_CAPTION="Custom caption"
 FLEXI_FIELD_MGALLERY_CUSTOM_CAPTION_DESC="Enter a custom caption to be used for ALL images"
+
+FLEXI_FIELD_MGALLERY_ABOUT_SELECTED_FILE="Selected File"
+FLEXI_FIELD_MGALLERY_ABOUT_SELECTED_FILE_DESC="You can replace an already selected file by a new one"
+FLEXI_FIELD_MGALLERY_ABOUT_REMOVE_FILE="Remove file"
+FLEXI_FIELD_MGALLERY_ABOUT_REMOVE_FILE_DESC="You can remove the already selected file"
+FLEXI_FIELD_MGALLERY_FILE_UNPUBLISHED="File Unpublished"
+FLEXI_FIELD_MGALLERY_FILE_UNPUBLISHED_DESC="File will not be displayed in frontend because it was unpublished"
+
+FLEXI_FIELD_MGALLERY_ALLOW_FILE_REMOVAL="Allow removal"
+FLEXI_FIELD_MGALLERY_ALLOW_FILE_REMOVAL_DESC="This will allow user to de-select and remove file from the disk without uploading a new one"
+FLEXI_FIELD_MGALLERY_REQUIRED_UPLOAD_NEW_TO_REPLACE="Required, upload new to replace"
+
+FLEXI_FIELD_MGALLERY_SELECTED_FILE="Selected file"
+FLEXI_FIELD_MGALLERY_UPLOAD_NEW="Upload new"
+FLEXI_FIELD_MGALLERY_MY_FILES="My files"
