Adding jtext for link in address field

--- a/plugins/flexicontent_fields/addressint/en-GB.plg_flexicontent_fields_addressint.ini
+++ b/plugins/flexicontent_fields/addressint/en-GB.plg_flexicontent_fields_addressint.ini
@@ -50,6 +50,7 @@ PLG_FLEXICONTENT_FIELDS_ADDRESSINT_NON_US_STATE_PROVINCE="State/Province (non US
 PLG_FLEXICONTENT_FIELDS_ADDRESSINT_ZIP_POSTAL_CODE="ZIP Code/Postal Code"
 PLG_FLEXICONTENT_FIELDS_ADDRESSINT_COUNTRY="Country"
 PLG_FLEXICONTENT_FIELDS_ADDRESSINT_GEOLOCATE="Geolocate"
+PLG_FC_ADDRESSINT_LINKTODIR="Click Map for Directions"
 
 PLG_FC_ADDRESSINT_CC_AF="Afghanistan"
 PLG_FC_ADDRESSINT_CC_AX="&Aring;land Islands"
