--- a/plugins/flexicontent_fields/addressint/en-GB.plg_flexicontent_fields_addressint.ini
+++ b/plugins/flexicontent_fields/addressint/en-GB.plg_flexicontent_fields_addressint.ini
@@ -51,6 +51,14 @@ PLG_FLEXICONTENT_FIELDS_ADDRESSINT_ZIP_POSTAL_CODE="ZIP Code/Postal Code"
 PLG_FLEXICONTENT_FIELDS_ADDRESSINT_COUNTRY="Country"
 PLG_FLEXICONTENT_FIELDS_ADDRESSINT_GEOLOCATE="Geolocate"
 PLG_FC_ADDRESSINT_LINKTODIR="Click Map for Directions"
+PLG_FC_ADDRESSINT_STREET2="Use address field 2"
+PLG_FC_ADDRESSINT_STREET3="Use address field 3"
+PLG_FC_ADDRESSINT_USSTATE="Use state"
+PLG_FC_ADDRESSINT_PROVINCE="Use province"
+PLG_FC_ADDRESSINT_UNIQUECOUNTRY="Unique country"
+PLG_FC_ADDRESSINT_COUNTRY="Country"
+PLG_FC_ADDRESSINT_HIDEFIELD_DESC="Set to no to hide field in form"
+PLG_FC_ADDRESSINT_UNIQUE_DESC="Tip unique country for geocode"
 
 PLG_FC_ADDRESSINT_CC_AF="Afghanistan"
 PLG_FC_ADDRESSINT_CC_AX="&Aring;land Islands"
