Improvements for recent changes in international address field regarding disabling some properties in item form

--- a/plugins/flexicontent_fields/addressint/en-GB.plg_flexicontent_fields_addressint.ini
+++ b/plugins/flexicontent_fields/addressint/en-GB.plg_flexicontent_fields_addressint.ini
@@ -51,14 +51,16 @@ PLG_FLEXICONTENT_FIELDS_ADDRESSINT_ZIP_POSTAL_CODE="ZIP Code/Postal Code"
 PLG_FLEXICONTENT_FIELDS_ADDRESSINT_COUNTRY="Country"
 PLG_FLEXICONTENT_FIELDS_ADDRESSINT_GEOLOCATE="Geolocate"
 PLG_FC_ADDRESSINT_LINKTODIR="Click Map for Directions"
-PLG_FC_ADDRESSINT_STREET2="Use address field 2"
-PLG_FC_ADDRESSINT_STREET3="Use address field 3"
-PLG_FC_ADDRESSINT_USSTATE="Use state"
-PLG_FC_ADDRESSINT_PROVINCE="Use province"
-PLG_FC_ADDRESSINT_UNIQUECOUNTRY="Unique country"
-PLG_FC_ADDRESSINT_COUNTRY="Country"
-PLG_FC_ADDRESSINT_HIDEFIELD_DESC="Set to no to hide field in form"
-PLG_FC_ADDRESSINT_UNIQUE_DESC="Tip unique country for geocode"
+
+PLG_FC_ADDRESSINT_USE_STREET2="Address 2"
+PLG_FC_ADDRESSINT_USE_STREET3="Address 3"
+PLG_FC_ADDRESSINT_USE_USSTATE="State"
+PLG_FC_ADDRESSINT_USE_PROVINCE="Province"
+PLG_FC_ADDRESSINT_USE_COUNTRY="Country"
+PLG_FC_ADDRESSINT_HIDEFIELD_DESC="Optional, you may disable this field"
+
+PLG_FC_ADDRESSINT_COUNTRY_FOR_ALL_ADDRS="Single country code"
+PLG_FC_ADDRESSINT_COUNTRY_FOR_ALL_ADDRS_DESC="You may set the same country code (e.g. EN, US, RU) for all addresses"
 
 PLG_FC_ADDRESSINT_CC_AF="Afghanistan"
 PLG_FC_ADDRESSINT_CC_AX="&Aring;land Islands"
