Fixed image field skipping empty values in fieldgroup, thus placing values in wrong group

--- a/plugins/flexicontent_fields/image/en-GB.plg_flexicontent_fields_image.ini
+++ b/plugins/flexicontent_fields/image/en-GB.plg_flexicontent_fields_image.ini
@@ -70,8 +70,8 @@ FLEXI_FIELD_URL_TARGET_DESC="Where to open the URL"
 FLEXI_FIELD_SAME_FRM_WIN_TAB="Same Frame/Window/Tab"
 FLEXI_FIELD_NEW_WIN_TAB="New Window/Tab"
 FLEXI_FIELD_MODAL_POPUP_WIN="Modal Popup Window"
-FLEXI_ALWAYS_ALLOW_IMAGE_VALUE_REMOVAL="Always allow removal<br/><small>even in cases that file deletion is possible</small>"
-FLEXI_ALWAYS_ALLOW_IMAGE_VALUE_REMOVAL_DESC="Normally, an image that is <b>no longer used</b> by other items/fields, you are only allowed to DELETE this image (file) from Disk & DB. <br/><br/> But if you enable this parameter, then you will be allowed to remove the value without deleting the file from Disk & DB. Thus the file will be available for use by other fields or by this field too (if you set parameter 'Added by any field or filemanager' below)"
+FLEXI_AUTO_DELETE_UNUSED="Auto delete unused"
+FLEXI_AUTO_DELETE_UNUSED_DESC="Images that are no longer used my any item will be automatically deleted. Automatic will delete unused images, if either existing image file selection is disabled, or if image selection list is limited to images used by current field"
 
 FLEXI_FIELD_TOOLTIP="tooltip"
 FLEXI_FIELD_SHOW_TITLE="Show Title"
@@ -140,9 +140,11 @@ FLEXI_FIELD_GALLERY_MODE="Acts as gallery <br/> (multi-value)"
 FLEXI_FIELD_GALLERY_MODE_DESC="Select to use single image (act as image field) or multiple images (act as gallery field)"
 FLEXI_FIELD_UNABLE_TO_DELETE_FILE="Unable to delete file"
 
-FLEXI_FIELD_REMOVE_VALUE="Remove this value"
-FLEXI_FIELD_DELETE_FILE="Delete Image File"
-FLEXI_FIELD_CHANGE_VALUE="Change this value"
+FLEXI_FIELD_UNLOAD_IMAGE="Unload (ignore this)"
+FLEXI_FIELD_UNLOAD_IMAGE_DESC="Ignore / do not save the currently selected image"
+FLEXI_FIELD_DELETE_OLD_IMAGE="Delete previous"
+FLEXI_FIELD_DELETE_OLD_IMAGE_DESC="Delete previously selected image from server storage"
+FLEXI_FIELD_NO_DELETE_OLD_IMAGE_DESC="Image is in use by other item(s), can not delete from server storage"
 
 FLEXI_FIELD_EDIT_VALUES_SKIPPED="Image/Gallery field: '%s', some values of this field have been skipped: [ %s ], because the original file seems to have been deleted (thumbnailing of it has failed).<br/> This message will go away once you save this content item"
 FLEXI_COPY_ORIGINAL="Copy original *"
