Add option to include a tel: hyperlink for phone numbers

--- a/plugins/flexicontent_fields/phonenumbers/en-GB.plg_flexicontent_fields_phonenumbers.ini
+++ b/plugins/flexicontent_fields/phonenumbers/en-GB.plg_flexicontent_fields_phonenumbers.ini
@@ -47,3 +47,5 @@ PLG_FLEXICONTENT_FIELDS_PHONENUMBERS_3_PART_NUM="area code + part 2 + part 3"
 PLG_FLEXICONTENT_FIELDS_OPTIONAL_PROPERTIES_EVERY_VALUE="Optional properties (of every value)"
 PLG_FLEXICONTENT_FIELDS_PROPERTY_SEPARATORS="Property separators"
 
+PLG_FLEXICONTENT_FIELDS_PHONENUMBERS_ADD_TEL_LINK="Add tel: link"
+PLG_FLEXICONTENT_FIELDS_PHONENUMBERS_ADD_TEL_LINK_DESC="Wraps the phone number in a link that uses the tel: protocol"
