--- a/plugins/flexicontent_fields/addressint/en-GB.plg_flexicontent_fields_addressint.ini
+++ b/plugins/flexicontent_fields/addressint/en-GB.plg_flexicontent_fields_addressint.ini
@@ -1,22 +1,50 @@
 PLG_FLEXICONTENT_FIELDS_ADDRESSINT="This field adds address information to items. Includes detailed fields for street address, city, state/province, zip/postal code and country. In the case of US addresses it includes a drop down list of States. It has a javascript geo-location function that gets latitude and longitude of the address using Google Map API for storage in the DB. In the frontend it automatically displays only the fields that have data, with a Google Map image of the location with a marker. The field configuration has several options to control the displaying in the frontend."
+PLG_FLEXICONTENT_FIELDS_ADDRESSINT_FORM_SETTINGS="Form Settings"
+PLG_FLEXICONTENT_FIELDS_ADDRESSINT_USE_GOOGLE_AUTOCOMPLETE="Use Google autocomplete"
+PLG_FLEXICONTENT_FIELDS_ADDRESSINT_USE_GOOGLE_AUTOCOMPLETE_DESC="Activate Google Maps autocomplete feature"
+PLG_FLEXICONTENT_FIELDS_ADDRESSINT_DEFAULT_COUNTRY="Default Country"
+PLG_FLEXICONTENT_FIELDS_ADDRESSINT_DEFAULT_COUNTRY_DESC="Select a country that will be used as default when editing the item"
+PLG_FLEXICONTENT_FIELDS_ADDRESSINT_EDIT_COUNTRY="Edit Country"
+PLG_FLEXICONTENT_FIELDS_ADDRESSINT_EDIT_COUNTRY_DESC="Select whether it is allowed to select a country when editing. If set to No the default country will always be used."
+PLG_FLEXICONTENT_FIELDS_ADDRESSINT_EDIT_LATLON="Edit Lat/Lon"
+PLG_FLEXICONTENT_FIELDS_ADDRESSINT_EDIT_LATLON_DESC="Select whether latitude and longitude coordinates can be edited."
+PLG_FLEXICONTENT_FIELDS_ADDRESSINT_MAP_ENGINE_CONFIG="Map Engine Configuration"
+PLG_FLEXICONTENT_FIELDS_ADDRESSINT_GOOGLE_MAPS_JS_API_KEY="Google Maps Javascript API Key"
+PLG_FLEXICONTENT_FIELDS_ADDRESSINT_GOOGLE_MAPS_JS_API_KEY_DESC="Enter your Google Maps Javascript API key. You can use the Google Maps API without a key but the usage limits are considerably lower. You can get your key following the instructions at https://developers.google.com/maps/documentation/javascript/get-api-key"
+PLG_FLEXICONTENT_FIELDS_ADDRESSINT_GOOGLE_MAPS_STATIC_API_KEY="Google Maps Static API Key"
+PLG_FLEXICONTENT_FIELDS_ADDRESSINT_GOOGLE_MAPS_STATIC_API_KEY_DESC="Enter your Google Maps Static API key. You can use the Google Maps API without a key but the usage limits are considerably lower. You can get your key following the instructions at https://developers.google.com/maps/documentation/static-maps/get-api-key"
+PLG_FLEXICONTENT_FIELDS_ADDRESSINT_MAP_CONFIGURATION="Map Configuration"
 PLG_FLEXICONTENT_FIELDS_ADDRESSINT_SHOW_MAP="Show Map"
 PLG_FLEXICONTENT_FIELDS_ADDRESSINT_SHOW_MAP_DESC="Select whether a Google map should be displayed with the address"
 PLG_FLEXICONTENT_FIELDS_ADDRESSINT_NEVER="Never"
 PLG_FLEXICONTENT_FIELDS_ADDRESSINT_CATEGORY_VIEW="Category view only"
 PLG_FLEXICONTENT_FIELDS_ADDRESSINT_ITEM_VIEW="Item view only"
 PLG_FLEXICONTENT_FIELDS_ADDRESSINT_ALWAYS="Always"
-PLG_FLEXICONTENT_FIELDS_ADDRESSINT_MAP_WIDTH="Map Width (px)"
-PLG_FLEXICONTENT_FIELDS_ADDRESSINT_MAP_HEIGHT="Map Height (px)"
+PLG_FLEXICONTENT_FIELDS_ADDRESSINT_MAP_EMBED_TYPE="Embed type"
+PLG_FLEXICONTENT_FIELDS_ADDRESSINT_MAP_EMBED_TYPE_DESC="Select the type of embed: image or interactive map"
+PLG_FLEXICONTENT_FIELDS_ADDRESSINT_INTERACTIVE_MAP="Interactive map"
+PLG_FLEXICONTENT_FIELDS_ADDRESSINT_IMAGE_MAP="Image map"
+PLG_FLEXICONTENT_FIELDS_ADDRESSINT_MAP_WIDTH="Width (px)"
+PLG_FLEXICONTENT_FIELDS_ADDRESSINT_MAP_WIDTH_DESC="Set width in pixels for image map"
+PLG_FLEXICONTENT_FIELDS_ADDRESSINT_MAP_HEIGHT="Height (px)"
+PLG_FLEXICONTENT_FIELDS_ADDRESSINT_MAP_HEIGHT_DESC="Set height in pixels for image map"
 PLG_FLEXICONTENT_FIELDS_ADDRESSINT_MAP_TYPE="Map Type"
 PLG_FLEXICONTENT_FIELDS_ADDRESSINT_MAP_TYPE_DESC="Select the type of map to show"
 PLG_FLEXICONTENT_FIELDS_ADDRESSINT_ROADMAP="Roadmap"
 PLG_FLEXICONTENT_FIELDS_ADDRESSINT_SATELLITE="Satellite"
 PLG_FLEXICONTENT_FIELDS_ADDRESSINT_HYBRID="Hybrid"
 PLG_FLEXICONTENT_FIELDS_ADDRESSINT_TERRAIN="Terrain"
-PLG_FLEXICONTENT_FIELDS_ADDRESSINT_MAP_ZOOM="Map Zoom"
-PLG_FLEXICONTENT_FIELDS_ADDRESSINT_MAP_ZOOM_DESC="Select the zoom level"
+PLG_FLEXICONTENT_FIELDS_ADDRESSINT_MAP_ZOOM="Default Map Zoom"
+PLG_FLEXICONTENT_FIELDS_ADDRESSINT_MAP_ZOOM_DESC="Select the zoom level for image map, and initial zoom for interactive map. When editing an item, the zoom level is saved and used for display."
+PLG_FLEXICONTENT_FIELDS_ADDRESSINT_MAP_ZOOM_WORLD="1 - World"
+PLG_FLEXICONTENT_FIELDS_ADDRESSINT_MAP_ZOOM_CONTINENT="4 - Continent"
+PLG_FLEXICONTENT_FIELDS_ADDRESSINT_MAP_ZOOM_COUNTRY="7 - Country"
+PLG_FLEXICONTENT_FIELDS_ADDRESSINT_MAP_ZOOM_REGION="10 - Region"
+PLG_FLEXICONTENT_FIELDS_ADDRESSINT_MAP_ZOOM_CITY="13 - City"
+PLG_FLEXICONTENT_FIELDS_ADDRESSINT_MAP_ZOOM_NEIGHBORHOOD="16 - Neighborhood"
+PLG_FLEXICONTENT_FIELDS_ADDRESSINT_MAP_ZOOM_STREET="19 - Street"
 PLG_FLEXICONTENT_FIELDS_ADDRESSINT_MAP_LINK="Map Clickable"
-PLG_FLEXICONTENT_FIELDS_ADDRESSINT_MAP_LINK_DESC="Add a link to Google Maps for the location shown in the map image. Opens in a new window."
+PLG_FLEXICONTENT_FIELDS_ADDRESSINT_MAP_LINK_DESC="For image map: adds a link to Google Maps for the location shown in the map image. Opens in a new window."
 PLG_FLEXICONTENT_FIELDS_ADDRESSINT_MAP_POSITION="Map Position"
 PLG_FLEXICONTENT_FIELDS_ADDRESSINT_MAP_POSITION_DESC="Renders the map image before or after the address text"
 PLG_FLEXICONTENT_FIELDS_ADDRESSINT_BEFORE_ADDR="Before address"
@@ -39,10 +67,41 @@ PLG_FLEXICONTENT_FIELDS_ADDRESSINT_TINY="Tiny"
 PLG_FLEXICONTENT_FIELDS_ADDRESSINT_MID="Mid"
 PLG_FLEXICONTENT_FIELDS_ADDRESSINT_SMALL="Small"
 PLG_FLEXICONTENT_FIELDS_ADDRESSINT_NORMAL="Normal"
+PLG_FLEXICONTENT_FIELDS_ADDRESSINT_ADDRESS_CONFIGURATION="Address Configuration"
+PLG_FLEXICONTENT_FIELDS_ADDRESSINT_SHOW_ADDRESS="Show address"
+PLG_FLEXICONTENT_FIELDS_ADDRESSINT_SHOW_ADDRESS_DESC="Select whether the address text should displayed"
+PLG_FLEXICONTENT_FIELDS_ADDRESSINT_DIRECTIONS_POSITION="Show directions link"
+PLG_FLEXICONTENT_FIELDS_ADDRESSINT_DIRECTIONS_POSITION_DESC="Select how directions link should be displayed"
+PLG_FLEXICONTENT_FIELDS_ADDRESSINT_LAYOUT="Layout"
+PLG_FLEXICONTENT_FIELDS_ADDRESSINT_ADDR_EDIT_MODE="Address edit mode"
+PLG_FLEXICONTENT_FIELDS_ADDRESSINT_ADDR_EDIT_MODE_DESC="Selects the edit mode for address. Plain text mode: uses address display field only. Formatted mode: shows the address components so that they can be edited individually (street, city, state, etc.)"
+PLG_FLEXICONTENT_FIELDS_ADDRESSINT_ADDR_DISPLAY_MODE="Address display mode"
+PLG_FLEXICONTENT_FIELDS_ADDRESSINT_ADDR_DISPLAY_MODE_DESC="Selects the display mode for address. Plain text mode: uses text from Address Display field. Formatted mode: allows setting an html address template that uses the address components (street, city, state, etc.)"
+PLG_FLEXICONTENT_FIELDS_ADDRESSINT_PLAINTEXT_MODE="Plain text mode"
+PLG_FLEXICONTENT_FIELDS_ADDRESSINT_FORMATTED_MODE="Formatted mode"
+PLG_FLEXICONTENT_FIELDS_ADDRESSINT_FORMAT_TEMPLATE="Address format"
+PLG_FLEXICONTENT_FIELDS_ADDRESSINT_FORMAT_TEMPLATE_DESC="Sets the HTML format template when display mode is Formatted. To enter field values use {{fieldname}}. To render conditionally, only if value is not empty, use [[fieldname|output]]. Valid options are: addr1, addr2, addr3, city, state, province, zip, zip_suffix, country, lat, lon. See default value for example."
+PLG_FLEXICONTENT_FIELDS_ADDRESSINT_DIRECTIONS_LINK_LABEL="Directions link label"
+PLG_FLEXICONTENT_FIELDS_ADDRESSINT_DIRECTIONS_LINK_LABEL_DESC="Label for the directions link. Leave blank to use default."
+PLG_FLEXICONTENT_FIELDS_ADDRESSINT_USE_ADDR2="Show address line 2"
+PLG_FLEXICONTENT_FIELDS_ADDRESSINT_USE_ADDR2_DESC="Show or hide the 2nd line for street address when editing in Formatted mode"
+PLG_FLEXICONTENT_FIELDS_ADDRESSINT_USE_ADDR3="Show address line 3"
+PLG_FLEXICONTENT_FIELDS_ADDRESSINT_USE_ADDR3_DESC="Show or hide the 3rd line for street address when editing in Formatted mode"
+PLG_FLEXICONTENT_FIELDS_ADDRESSINT_USE_USSTATE="Show US state"
+PLG_FLEXICONTENT_FIELDS_ADDRESSINT_USE_USSTATE_DESC="Show or hide the list of US states when editing in Formatted mode"
+PLG_FLEXICONTENT_FIELDS_ADDRESSINT_USE_PROVINCE="Show province"
+PLG_FLEXICONTENT_FIELDS_ADDRESSINT_USE_PROVINCE_DESC="Show or hide the Province field when editing in Formatted mode"
+PLG_FLEXICONTENT_FIELDS_ADDRESSINT_USE_ZIP_SUFFIX="Show ZIP/Postal code suffix"
+PLG_FLEXICONTENT_FIELDS_ADDRESSINT_USE_ZIP_SUFFIX_DESC="Show or hide the ZIP/Postal code suffix field when editing in Formatted mode"
+PLG_FLEXICONTENT_FIELDS_ADDRESSINT_USE_COUNTRY="Show country"
+PLG_FLEXICONTENT_FIELDS_ADDRESSINT_USE_COUNTRY_DESC="Show or hide the list of countries when editing in Formatted mode"
+
 PLG_FLEXICONTENT_FIELDS_ADDRESSINT_FIELD_PREFIX="Field Prefix"
 PLG_FLEXICONTENT_FIELDS_ADDRESSINT_FIELD_PREFIX_DESC="HTML to place before the field"
 PLG_FLEXICONTENT_FIELDS_ADDRESSINT_FIELD_SUFFIX="Field Suffix"
 PLG_FLEXICONTENT_FIELDS_ADDRESSINT_FIELD_SUFFIX_DESC="HTML to place after the field"
+PLG_FLEXICONTENT_FIELDS_ADDRESSINT_SEARCH_ADDRESS="Search address"
+PLG_FLEXICONTENT_FIELDS_ADDRESSINT_FORMATTED_ADDRESS="Display address"
 PLG_FLEXICONTENT_FIELDS_ADDRESSINT_STREET_ADDRESS="Street Address"
 PLG_FLEXICONTENT_FIELDS_ADDRESSINT_CITY="City"
 PLG_FLEXICONTENT_FIELDS_ADDRESSINT_US_STATE="US State"
@@ -50,17 +109,10 @@ PLG_FLEXICONTENT_FIELDS_ADDRESSINT_NON_US_STATE_PROVINCE="State/Province (non US
 PLG_FLEXICONTENT_FIELDS_ADDRESSINT_ZIP_POSTAL_CODE="ZIP Code/Postal Code"
 PLG_FLEXICONTENT_FIELDS_ADDRESSINT_COUNTRY="Country"
 PLG_FLEXICONTENT_FIELDS_ADDRESSINT_GEOLOCATE="Geolocate"
-PLG_FC_ADDRESSINT_LINKTODIR="Click Map for Directions"
-
-PLG_FC_ADDRESSINT_USE_STREET2="Address 2"
-PLG_FC_ADDRESSINT_USE_STREET3="Address 3"
-PLG_FC_ADDRESSINT_USE_USSTATE="State"
-PLG_FC_ADDRESSINT_USE_PROVINCE="Province"
-PLG_FC_ADDRESSINT_USE_COUNTRY="Country"
-PLG_FC_ADDRESSINT_HIDEFIELD_DESC="Optional, you may disable this field"
-
-PLG_FC_ADDRESSINT_COUNTRY_FOR_ALL_ADDRS="Single country code"
-PLG_FC_ADDRESSINT_COUNTRY_FOR_ALL_ADDRS_DESC="You may set the same country code (e.g. EN, US, RU) for all addresses"
+PLG_FLEXICONTENT_FIELDS_ADDRESSINT_LATITUDE="Latitutde"
+PLG_FLEXICONTENT_FIELDS_ADDRESSINT_LONGITUDE="Longitude"
+PLG_FLEXICONTENT_FIELDS_ADDRESSINT_ZOOM_LEVEL="Zoom level"
+PLG_FLEXICONTENT_FIELDS_ADDRESSINT_PREVIEW="Preview"
 
 PLG_FC_ADDRESSINT_CC_AF="Afghanistan"
 PLG_FC_ADDRESSINT_CC_AX="&Aring;land Islands"
@@ -311,3 +363,5 @@ PLG_FC_ADDRESSINT_CC_EH="Western Sahara"
 PLG_FC_ADDRESSINT_CC_YE="Yemen"
 PLG_FC_ADDRESSINT_CC_ZM="Zambia"
 PLG_FC_ADDRESSINT_CC_ZW="Zimbabwe"
+
+PLG_FC_ADDRESSINT_GET_DIRECTIONS="Get Directions"
